--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 beautifulsoup4==4.12.2
+branca==0.6.0
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
@@ -12,7 +13,11 @@ django-bootstrap-icons==0.8.3
 django-bootstrap-v5==1.0.11
 django-ckeditor==6.6.1
 django-js-asset==2.1.0
+folium==0.14.0
 idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+numpy==1.25.2
 oauthlib==3.2.2
 Pillow==10.0.0
 pycparser==2.21
