--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-ckeditor==6.6.1
 django-crispy-forms==2.1
 django-js-asset==2.1.0
 django-widget-tweaks==1.5.0
+djangorestframework==3.14.0
 folium==0.14.0
 idna==3.4
 Jinja2==3.1.2
@@ -26,6 +27,7 @@ pillow==10.2.0
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
+pytz==2024.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 soupsieve==2.4.1
