--- a/requirements.txt
+++ b/requirements.txt
@@ -7,30 +7,41 @@ charset-normalizer==3.2.0
 crispy-tailwind==1.0.0
 cryptography==41.0.3
 defusedxml==0.7.1
+diff-match-patch==20230430
 Django==4.2.3
 django-allauth==0.55.0
 django-autoslug==1.9.9
 django-bootstrap-icons==0.8.3
 django-bootstrap-v5==1.0.11
+django-browser-reload==1.12.1
 django-ckeditor==6.6.1
 django-crispy-forms==2.1
+django-import-export==3.3.7
 django-js-asset==2.1.0
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
+et-xmlfile==1.1.0
 folium==0.14.0
 idna==3.4
 Jinja2==3.1.2
+MarkupPy==1.14
 MarkupSafe==2.1.3
 numpy==1.25.2
 oauthlib==3.2.2
+odfpy==1.4.1
+openpyxl==3.1.2
 pillow==10.2.0
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2024.1
+PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 soupsieve==2.4.1
 sqlparse==0.4.4
+tablib==3.5.0
 typing_extensions==4.7.1
 urllib3==2.0.4
+xlrd==2.0.1
+xlwt==1.3.0
