--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-import-export==3.3.7
 django-js-asset==2.1.0
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
+dotenv==0.0.5
 et-xmlfile==1.1.0
 folium==0.14.0
 idna==3.4
